# violet-search

./: .env.example  CONTRIBUTE.md  LANGUAGE.md  README.md  composer.json
app/Http/Controllers/: SearchController.php  SettingsController.php
config/: session.php
microservice/: Cargo.toml
microservice/cpp/dropdowns/: dropdowns.cpp  dropdowns.hpp
microservice/src/: main.rs
microservice/src/api/wikipedia/: wiki_domains.rs
microservice/src/engines/: mod.rs
microservice/src/engines/client/: client.rs
microservice/src/engines/dropdowns/: dropdowns.rs  mod.rs
microservice/src/engines/duckduckgo/: duckduckgo.rs  mod.rs
microservice/src/exceptions/: exceptions.rs
microservice/src/helpers/: helpers.rs
microservice/src/rotation/: create_proxy.rs  mod.rs
microservice/src/tor/: mod.rs  tor_connection.rs
public/css/: _fonts.css  _fonts.css.map  _grid.css  _grid.css.map  _reset.css  app.css
public/fonts/assistant/: SIL Open Font License.txt
public/js/: components.js  wikipedia.js
public/js/parser/: dropdowns.js  duckduckgo.js
public/scss/: _fonts.scss  _grid.scss
resources/lang/: az.php  cn.php  de.php  el.php  en.php  es.php  fr.php  it.php  jp.php  kr.php  ru.php  tr.php  translate.php
resources/views/: index.blade.php  search.blade.php  settings.blade.php
resources/views/components/: Input-dropdown.blade.php  Sidebar.blade.php
rotation/: main.c
rotation/server/: create_server.c  create_server.h
rotation/server/rand/: ip.c  ip.h
rotation/server/request/: request.c
routes/: web.php
scrap/: .env.example  Cargo.toml
(+8 files in other folders)
