[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
colored = "2.0.4"
dotenv = "0.15.0"
scraper = "0.17.1"
reqwest = {version = "*", features = ["blocking", "json"]}
futures-util = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
axum = "0.6.4"
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"]}
tower-http = { version = "0.3.4", features = ["trace"] }
tower = { version = "0.4", features = ["make"] }
